# aeircd

./: CMakeLists.txt  README  README.md
src/: Logger.cpp  Logger.hpp  Message.cpp  Message.hpp  SysDep.hpp  SysDep_unix.cpp  SysDep_win32.cpp  aeircd.cpp  aeircd.hpp  main.cpp
